Made some modifications to the file

--- a/Lab_Assignment_3/Assignment3.ipynb
+++ b/Lab_Assignment_3/Assignment3.ipynb
@@ -1602,6 +1602,15 @@
     "**Case 3 Using X_small and Y_small dataset:**\n",
     "In this case, the log loss (0.243140) is almost the same as that of case one. This shows that the model is confident and accurate in predicting class probabilities. This is evident because with the given dataset and the training-to-testing percentage of 70% and 30% used, the model gathered enough experience during training in the case of this smaller dataset, hence the small log loss value gotten.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Github link: https://github.com/ChidiPatrick/engg680_2024_fall.git"
+   ]
   }
  ],
  "metadata": {
