Modified some sections of the code

--- a/Lab_Assignment_3/Assignment3.ipynb
+++ b/Lab_Assignment_3/Assignment3.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 1,
    "metadata": {
     "id": "2qxkjlPffU5i"
    },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 2,
    "metadata": {
     "id": "cQFmPFgSer4j"
    },
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 3,
    "metadata": {
     "id": "8M2l7sYCidJk"
    },
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 4,
    "metadata": {
     "id": "Sbgo4ocySPgc"
    },
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 5,
    "metadata": {
     "id": "3rk4LH_vmdTt"
    },
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 6,
    "metadata": {
     "id": "N7mj7pSendpL"
    },
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 7,
    "metadata": {
     "id": "Hp4IBULcnfbx"
    },
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 8,
    "metadata": {
     "id": "MTsggeOpnn0d"
    },
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 9,
    "metadata": {
     "id": "Z7t9vV_onsJF"
    },
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 10,
    "metadata": {
     "id": "6icMLcQaW5Tm"
    },
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 11,
    "metadata": {
     "id": "KgL59a0fidZy"
    },
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 12,
    "metadata": {
     "id": "egyBGcrTicnj"
    },
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 13,
    "metadata": {
     "id": "ai5fL_xpYZrF"
    },
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 14,
    "metadata": {
     "id": "QgkMaZ8njLvi"
    },
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 15,
    "metadata": {
     "id": "GnxdphaK8eRQ"
    },
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 16,
    "metadata": {
     "id": "w_xCLIlubjMQ"
    },
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 17,
    "metadata": {
     "id": "V5xiCc0u8pEW"
    },
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 18,
    "metadata": {
     "id": "j3v08O12F3nR"
    },
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1137,16 +1137,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Metrics for X and Y values:\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -1159,6 +1152,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Metrics for X and Y values:\n",
       "Data size: 11055\n",
       "Number of training samples: 7738\n",
       "Number of testing samples: 3317\n",
@@ -1178,16 +1172,7 @@
       "Testing log loss: 0.6774\n",
       "\n",
       "\n",
-      "Metrics for X_small and y_small values:\n",
-      "Data size: 331\n",
-      "Number of training samples: 231\n",
-      "Number of testing samples: 100\n",
-      "Training accuracy: 0.9481\n",
-      "Testing accuracy: 0.9300\n",
-      "Training log loss: 0.1620\n",
-      "Testing log loss: 0.1923\n",
-      "\n",
-      "\n"
+      "Metrics for X_small and y_small values:\n"
      ]
     },
     {
@@ -1198,6 +1183,21 @@
       "  y = column_or_1d(y, warn=True)\n",
       "c:\\Users\\User\\Documents\\Anaconda_packages\\Lib\\site-packages\\sklearn\\utils\\validation.py:1300: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data size: 331\n",
+      "Number of training samples: 231\n",
+      "Number of testing samples: 100\n",
+      "Training accuracy: 0.9481\n",
+      "Testing accuracy: 0.9300\n",
+      "Training log loss: 0.1620\n",
+      "Testing log loss: 0.1923\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -1276,23 +1276,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 21,
    "metadata": {
     "id": "YNhvpVphLfAo"
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\User\\Documents\\Anaconda_packages\\Lib\\site-packages\\sklearn\\utils\\validation.py:1300: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n",
-      "c:\\Users\\User\\Documents\\Anaconda_packages\\Lib\\site-packages\\sklearn\\utils\\validation.py:1300: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n",
-      "c:\\Users\\User\\Documents\\Anaconda_packages\\Lib\\site-packages\\sklearn\\utils\\validation.py:1300: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -1306,6 +1294,18 @@
       "0          0.922822  0.190326  \n",
       "1          0.556828  0.683573  \n",
       "2          0.910000  0.200366  \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\User\\Documents\\Anaconda_packages\\Lib\\site-packages\\sklearn\\utils\\validation.py:1300: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
+      "c:\\Users\\User\\Documents\\Anaconda_packages\\Lib\\site-packages\\sklearn\\utils\\validation.py:1300: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
+      "c:\\Users\\User\\Documents\\Anaconda_packages\\Lib\\site-packages\\sklearn\\utils\\validation.py:1300: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
      ]
     }
    ],
@@ -1391,38 +1391,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 22,
    "metadata": {
     "id": "wXdpCzuEmoN2"
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dimension of predicted output: (3317,)\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "c:\\Users\\User\\Documents\\Anaconda_packages\\Lib\\site-packages\\sklearn\\utils\\validation.py:1300: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dimension of predicted output: (3317,)\n",
-      "Confusion Matrix:\n",
-      " [[1341  157]\n",
-      " [  99 1720]]\n",
-      "\n",
-      "Classification Report:\n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "          -1       0.93      0.90      0.91      1498\n",
-      "           1       0.92      0.95      0.93      1819\n",
-      "\n",
-      "    accuracy                           0.92      3317\n",
-      "   macro avg       0.92      0.92      0.92      3317\n",
-      "weighted avg       0.92      0.92      0.92      3317\n",
-      "\n"
      ]
     }
    ],
@@ -1444,19 +1430,13 @@
     "# Print the dimension of the predicted output\n",
     "print(\"Dimension of predicted output:\", y_pred.shape)\n",
     "\n",
-    "# Print the confusion matrix\n",
-    "conf_matrix = confusion_matrix(y_test, y_pred)\n",
-    "print(\"Confusion Matrix:\\n\", conf_matrix)\n",
     "\n",
-    "# Print the classification report\n",
-    "class_report = classification_report(y_test, y_pred)\n",
-    "print(\"\\nClassification Report:\\n\", class_report)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 23,
    "metadata": {
     "id": "IVKHFkgiuEPx"
    },
@@ -1511,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 24,
    "metadata": {
     "id": "aXgrWpLGxBnv"
    },
@@ -1605,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
