--- a/Lab_Assignment_4/Assignment 4.ipynb
+++ b/Lab_Assignment_4/Assignment 4.ipynb
@@ -2876,7 +2876,19 @@
    "metadata": {},
    "source": [
     "**Question**\n",
-    "1. Please list the features that you have selected and explain *why you have chosen* these features? (4 marks)\n"
+    "1. Please list the features that you have selected and explain *why you have chosen* these features? (4 marks)\n",
+    "\n",
+    "**Features Selected are: 'a_sum', 'g_sum', 'ax_var', 'gy_var','az_max'**\n",
+    "\n",
+    "**a_sum(Sum of Accelerations Across All Axes):** This represents the overall magnitude of linear acceleration, which can differentiate motion states (e.g., rest, straight, turn).By aggregating accelerations along all axes, it reduces the impact of noise in individual components. It helps in recognizing changes in motion intensity, such as acceleration during \"straight\" movement or a sudden stop.\n",
+    "\n",
+    "**g_sum (Sum of Angular Velocities Across All Axes):** It reflects the overall rotational movement, which is crucial for detecting \"turns\" or rotational motions. Like a_sum, it minimizes noise by combining data from all axes. It distinguishes rotational states (turning) from linear movements (rest, straight).\n",
+    "\n",
+    "**ax_var (Variance of Acceleration in the X-Axis):** Variance measures fluctuations in motion, helping identify unstable or erratic states. It Helps differentiate between smooth movements (e.g., \"rest\" or \"straight\") and erratic transitions.\n",
+    "\n",
+    "**gy_var (Variance of Angular Velocity in the Y-Axis):** Variance of angular velocity indicates how consistently the device rotates around the Y-axis. The Y-axis often corresponds to side-to-side rotational motion. This feature helps identify rotational irregularities, making it useful for detecting \"turns.\"\n",
+    "\n",
+    "**az_max (Maximum Acceleration in the Z-Axis):** The Z-axis typically corresponds to vertical motion (e.g., jumping or vibrations). Maximum values highlight extreme motion events, such as sudden impacts or abrupt stops.This identifies motion patterns that involve significant vertical activity or impact.\n"
    ]
   },
   {
